--- a/environment.yml
+++ b/environment.yml
@@ -6,12 +6,13 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10
-  - faiss-gpu=1.8.0
+  - python=3.9
+  - faiss-gpu=1.6.5
   - cuda-toolkit=12.1
   - pytorch=2.1.2
-  - pytorch-cuda=12.1 
+  - pytorch-cuda=12.1
   - torchvision=0.16.2
+  - scipy=1.11.4
   - pip
   - pip:
       - open3d==0.18.0
