--- a/configs/Replica/office1.yaml
+++ b/configs/Replica/office1.yaml
@@ -1,5 +1,5 @@
 inherit_from: configs/Replica/replica.yaml
 data:
   scene_name: office1
-  input_path: data/Replica-SLAM/Replica/office1/
+  input_path: ../Datasets/Replica/office1/
   output_path: output/Replica/office1/
