--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-torch==2.1.2
-torchvision==0.16.2
+torch==2.0.1
+torchvision==0.15.2
 faiss-gpu==1.7.2
 open3d==0.18.0
 scipy==1.11.4
+matplotlib
 ninja
 wandb
 trimesh
